# api_crud_generate_libary

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
api_crud_generate_libary/controllers/: controller.py
api_crud_generate_libary/helpers/: join_load_builder.py
api_crud_generate_libary/routers/: router.py
api_crud_generate_libary/schemas/: pattern_schema.py
api_crud_generate_libary/services/: service.py
src/controllers/: controller.py
src/helpers/: join_load_builder.py
src/schemas/: message_schema.py  pattern_schema.py
