[project]
name = "api-crud-generate-libary"
version = "1.0.2"
description = "A libary created to Simplify your routine generating a Full CRUD API based on database models and schemas"
authors = [
    {name = "Pedro Vieira",email = "pedro515vieira@gmail.com"}
]
package-mode = false
readme = "README.md"


[tool.poetry]
packages = [{ include = "api_crud_generate_libary" }]


requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
