[project]
name = "api-crud-generate-libary"
version = "1.1.0"
description = "A libary created to Simplify your routine generating a Full CRUD API based on database models and schemas"
authors = [
    {name = "Pedro Vieira", email = "pedro515vieira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5,<3.0.0",
    "fastapi>=0.135.3,<0.136.0",
    "sqlalchemy>=2.0.49,<3.0.0",
    "asyncpg>=0.31.0,<0.32.0"
]

[tool.poetry]
packages = [{ include = "api_crud_generate_libary" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
